css/cihan.css
/* ---------------------------------------------------------------------------------------------------------------------------
 * Import Styles
 * --------------------------------------------------------------------------------------------------------------------------- */
/* ---------------------------------------------------------------------------------------------------------------------------
 * Variables
 * --------------------------------------------------------------------------------------------------------------------------- */
/* ---------------------------------------------------------------------------------------------------------------------------
 * Mixins
 * --------------------------------------------------------------------------------------------------------------------------- */
/* ---------------------------------------------------------------------------------------------------------------------------
 * Extends & Placeholders
 * --------------------------------------------------------------------------------------------------------------------------- */
/* ---------------------------------------------------------------------------------------------------------------------------
 * Functions
 * --------------------------------------------------------------------------------------------------------------------------- */
/* ---------------------------------------------------------------------------------------------------------------------------
 * Base Styles
 * --------------------------------------------------------------------------------------------------------------------------- */
html, body {
  height: 100%; }

*,
*::before,
*::after {
  box-sizing: inherit; }

body {
  font-family: "Droid Sans", sans-serif;
  color: #000000;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale; }

h1, h2, h3, h4, h5, h6 {
  font-family: "Abril Fatface", cursive;
  text-align: center; }

h1,
h2,
h3,
h4,
h5,
h6 {
  color: #d01614;
  width: 50%;
  padding-bottom: 8px;
  border-bottom: 3px solid #d01614;
  margin-right: auto;
  margin-left: auto; }
  @media screen and (max-width: 600px) {
    h1,
    h2,
    h3,
    h4,
    h5,
    h6 {
      width: 70%; } }

h2 {
  margin-top: 60px;
  margin-bottom: 60px; }

a {
  color: #d01614;
  text-decoration: underline; }
  a:hover {
    color: #eb2e2c;
    text-decoration: underline; }

em {
  color: #000000;
  font-weight: bold;
  font-style: normal; }

.fa {
  color: #d01614; }

p {
  margin-top: 30px; }

/* ---------------------------------------------------------------------------------------------------------------------------
 *   button
 * --------------------------------------------------------------------------------------------------------------------------- */
.project-button {
  font-family: "Abril Fatface", cursive;
  font-size: 20px;
  color: #FFFFFF;
  background-color: #d01614;
  padding: 13px 23px;
  border: 1px solid #d01614;
  border-radius: 3px;
  text-decoration: none;
  display: inline-block; }
  .project-button:hover {
    color: #d01614;
    background-color: #FFFFFF;
    text-decoration: none; }

/* ---------------------------------------------------------------------------------------------------------------------------
 * UI Elements
 * --------------------------------------------------------------------------------------------------------------------------- */
/* ---------------------------------------------------------------------------------------------------------------------------
 * Mobile Menu
 * --------------------------------------------------------------------------------------------------------------------------- */
a.hamburger-icon {
  position: fixed;
  top: 15px;
  left: 15px;
  z-index: 998;
  color: #FFFFFF; }
  @media screen and (max-width: 600px) {
    a.hamburger-icon {
      top: 10px; } }
  a.hamburger-icon:hover {
    color: #FFFFF; }
  a.hamburger-icon i {
    font-size: 35px; }
    @media screen and (max-width: 600px) {
      a.hamburger-icon i {
        font-size: 35px; } }

/* ---------------------------------------------------------------------------------------------------------------------------
 *   side-nav
 * --------------------------------------------------------------------------------------------------------------------------- */
.side-nav li {
  font-family: "Abril Fatface", cursive; }
.side-nav li:first-of-type {
  margin-top: 60px;
  line-height: 55px; }
.side-nav a {
  text-decoration: none;
  color: #d01614;
  font-size: 26px;
  padding-left: 25px;
  padding-bottom: 25px; }

#sidenav-overlay {
  background: none; }

/* ---------------------------------------------------------------------------------------------------------------------------
 * Header
 * --------------------------------------------------------------------------------------------------------------------------- */
nav {
  background-color: #d01614; }

#nav-mobile {
  position: absolute;
  left: 50%;
  transform: translateX(-50%); }
  #nav-mobile a {
    font-family: "Abril Fatface", cursive;
    text-decoration: none;
    padding: 0 25px; }
    #nav-mobile a:hover {
      color: white;
      background-color: #b91412; }
  #nav-mobile a.active {
    background-color: #b91412; }

/* ---------------------------------------------------------------------------------------------------------------------------
 * parallax
 * --------------------------------------------------------------------------------------------------------------------------- */
.parallax-container {
  height: 400px; }
  @media screen and (min-width: 601px) and (max-width: 1000px) {
    .parallax-container {
      height: 300px;
      box-shadow: 0px 0px 24px 0px rgba(0, 0, 0, 0.75); } }
  @media screen and (max-width: 600px) {
    .parallax-container {
      height: 200px;
      box-shadow: 0px 0px 24px 0px rgba(0, 0, 0, 0.75); } }

@media screen and (min-width: 601px) and (max-width: 1000px) {
  .no-parallax {
    height: 300px; } }
@media screen and (max-width: 600px) {
  .no-parallax {
    height: 200px; } }
.no-parallax img {
  height: 100%;
  width: 160%; }

/* ---------------------------------------------------------------------------------------------------------------------------
 * home
 * --------------------------------------------------------------------------------------------------------------------------- */
#home {
  height: 100vh;
  background: url(../images/home-bg.png) no-repeat center center;
  background-size: cover;
  position: relative; }
  #home .title-wrapper {
    position: absolute;
    top: 70%;
    left: 50%;
    transform: translate(-50%, -50%); }
    #home .title-wrapper h4, #home .title-wrapper h5 {
      width: 100%;
      border: none; }

/* ---------------------------------------------------------------------------------------------------------------------------
 * projects
 * --------------------------------------------------------------------------------------------------------------------------- */
#projects {
  text-align: center; }
  #projects img {
    max-width: 85%;
    margin-top: 60px; }
  #projects .project-header {
    margin-top: 120px; }
    @media screen and (max-width: 600px) {
      #projects .project-header {
        margin-top: 30px; } }
  #projects .project-button {
    margin-top: 30px;
    margin-bottom: 60px; }

/* ---------------------------------------------------------------------------------------------------------------------------
 * skills
 * --------------------------------------------------------------------------------------------------------------------------- */
#skills {
  margin-bottom: 60px; }
  #skills h5 {
    width: 100%;
    font-family: "Droid Sans", sans-serif;
    border: none;
    font-weight: bold;
    text-align: left; }
  #skills img {
    width: 40px; }
  #skills li {
    display: inline;
    padding-left: 15px; }
  #skills .coding-skills, #skills .design-skills {
    margin-bottom: 30px; }

/* ---------------------------------------------------------------------------------------------------------------------------
 * about
 * --------------------------------------------------------------------------------------------------------------------------- */
#about h5 {
  margin: 0;
  padding: 0; }
#about h5 {
  font-family: "Droid Sans", sans-serif;
  border: none;
  font-weight: bold;
  text-align: left;
  margin-bottom: 5px; }
  @media screen and (min-width: 601px) and (max-width: 1000px) {
    #about h5 {
      text-align: center;
      width: 100%; } }
@media screen and (min-width: 601px) and (max-width: 1000px) {
  #about ul {
    text-align: center; } }
#about .company-name {
  font-weight: bold; }
#about .experience {
  margin-bottom: 30px; }
  #about .experience p {
    margin: 0; }
#about .education {
  margin-bottom: 30px; }
  #about .education p {
    margin: 0; }
#about .language p {
  margin: 0; }
#about .about-me {
  margin-bottom: 90px;
  text-align: center; }
#about span {
  font-weight: bold; }
#about .testimonials .testimonial {
  margin-bottom: 60px;
  box-sizing: border-box;
  display: inline-block; }
#about .testimonials h5 {
  text-align: center;
  width: 100%;
  margin-bottom: 60px; }
#about .testimonials .testimonial-content p {
  margin: 0; }
#about .testimonials .testimonial-content::before {
  content: url("../images/open-quote.png"); }
#about .testimonials .testimonial-content::after {
  content: url("../images/close-quote.png");
  float: right; }
#about .testimonials .reference-name {
  display: block;
  float: right;
  margin-top: 42px;
  text-align: center; }

#contact .contact-item {
  text-align: center;
  margin-top: 60px;
  margin-bottom: 162px;
  color: #d01614;
  transition: all 0.4s ease; }
  @media screen and (max-width: 600px) {
    #contact .contact-item {
      margin-top: 18px;
      margin-bottom: 18px; } }
  #contact .contact-item:hover {
    transform: scale(1.05); }
#contact p {
  text-align: center; }
#contact a {
  text-decoration: none; }

/* ---------------------------------------------------------------------------------------------------------------------------
 * Import Responsive Styles
 * --------------------------------------------------------------------------------------------------------------------------- */
a.mobile-logo {
  color: #FFFFFF;
  font-size: 30px;
  font-family: "Abril Fatface", cursive;
  position: absolute;
  left: 50%;
  transform: translateX(-50%);
  text-decoration: none; }
  a.mobile-logo:hover {
    color: #FFFFF; }

#screen-size-check {
  float: left; }
  @media screen and (min-width: 1001px) {
    #screen-size-check {
      float: none; } }

@media screen and (min-width: 1001px) {
  .no-parallax {
    display: none; } }

